frontend/app/styles/partials/create-badge.scss
.ui{
  .column{
    color: black;

    .create-badge {
      position: relative;
      padding-left: 6%;
      padding-right: 6%;
      top: 14px;
    }
  }
}

.gallery {
  margin: 0 0 10px 10px;
}

.guide {
  left: 10px;
  position: relative;
}

.ui.image {
  position: unset;
}

.ui {
  .row {
    .column {
      color: black;
    }
  }
}
.hide {
  display: none !important;
}

.font_type{
  margin: 0 30px 0 -35px;
}

.labels{
  margin: 0 10px 0 -10px;
}

.guide {
  left: 10px;
  position: relative;
}

.selection {
  min-width:3em !important;
}

.ui.image {
  margin:auto; 
}

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch .checkswitch {display:none;}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

.checkswitch:checked + .slider {
  background-color: #2196F3;
}

.checkswitch:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

.checkswitch:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

